changed java version to 25 and lwjgl version to 3.4.1